--- a/app/styles/contentScript.scss
+++ b/app/styles/contentScript.scss
@@ -77,7 +77,7 @@ body[data-loading="true"] #loading-overlay {
 
 #panel-outline {
   height: 50%; /* Set the height of the outline panel to 50% */
-  min-height: 64px; /* Update the minimum height to 64px */
+  min-height: 96px;
   overflow: auto; /* Ensure the content is scrollable */
 }
 
