--- a/app/styles/contentScript.scss
+++ b/app/styles/contentScript.scss
@@ -56,6 +56,7 @@
   text-align: left; /* Aligns text inside */
   margin-bottom: 5px;
   font-weight: bold;
+  color: black;
 }
 
 .title-btn:hover {
