add TODOs in excerpts

--- a/app/styles/contentScript.scss
+++ b/app/styles/contentScript.scss
@@ -45,8 +45,8 @@
 
 /* ✅ Bookmark Activated (Toggled) */
 .bookmark.active {
-  background: black;
-  color: white;
+  background: #24a0ed;
+  color: black;
 }
 
 
